2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* score/cpu_asm.c: Removed incorrect statement about copyright
	assignment.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* score/cpu_asm.c: Rework logic that decides when to call
	_Thread_Dispatch.  Analysis by Sergei Organov <osv@javad.ru>
	determined that _ISR_Signals_to_thread_executing was not being
	honored and/or cleared properly.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in subdir Makefile.ams
	* configure.ac: Reflect changes above.
	* score/Makefile.am: Removed.
	* sci/Makefile.am: Removed.
	* timer/Makefile.am: Removed.
	* clock/Makefile.am: Removed.

2002-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Eliminate @RTEMS_BSP@.cfg, $(C_O_FILES).
	* sci/Makefile.am: Likewise.
	* score/Makefile.am: Likewise.
	* timer/Makefile.am: Likewise.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-11-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge in include/Makefile.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* score/cpu_asm.c, score/ispsh7750.c: Removed warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.
